--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
     "lodash.merge": "^4.6.2",
     "nodemon": "^2.0.20"
