--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         ],
         "esModuleInterop": true,
         "typeRoots": [
-            "./src/types"
+            "./src/types/"
         ]
     },
     "include": [
